# food_project

./: .gitignore  .pre-commit-config.yaml  README.md  database.py  food_project.py  main.py  modelos.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py
src/analysis/: __init__.py  brand_mapping.json  food_analysis.ipynb
src/config/: __init__.py  bigquery_config.py
src/data/: food_project.py
tests/: test_connection.py
